--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ Alex looks okay, going to merge for you
 REVIEW_VOTE_ADD:2 (Senior developer)
 </code></pre>
 
-<h3>
-<a name="scoring" class="anchor" href="#scoring"><span class="octicon octicon-link"></span></a>scoring</h3>
-
-<pre><code>Repo owner: 3
+<ul>
+<li>Merge is now ready to be completed by whoever reviews the score total first.
+###scoring</li>
+</ul><pre><code>Repo owner: 3
 Senior developer: 2
 Developer: 1
 </code></pre>
