Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Git peer merge</h1>
-          <h2>Here be the rules for how to peer review a merge</h2>
+          <h2>Here is the guide for how to peer review a merge</h2>
         </header>
 
         <section id="downloads" class="clearfix">
