Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <a name="process" class="anchor" href="#process"><span class="octicon octicon-link"></span></a>Process</h2>
 
 <ul>
-<li>A pull request is opened and the contributor writes an opening comment stating the requirement level.</li>
+<li>A pull request is opened and the contributor writes an opening comment stating the requirement level (It could be agreed upon beforehand).</li>
 </ul><pre><code>#PR Initial comment
 PR#41 to fix broken feature and adds new functionality..
   - Alex
@@ -58,7 +58,12 @@ REQUIRED_REVIEW_VOTES:3
 </ul><pre><code>#PR Response comment
 Hi Alex, Looks good to me
   - John
-REVIEW_VOTE_ADD:1 (Developer)
+LGTM:1 (Developer)  
+</code></pre>
+
+<p>We see that a developer here has cast his 1 vote at the end of his comment</p>
+
+<pre><code>LGTM:1 (Developer)  
 </code></pre>
 
 <ul>
@@ -66,7 +71,7 @@ REVIEW_VOTE_ADD:1 (Developer)
 </ul><pre><code>#PR response comment
 Alex looks okay, going to merge for you
   - Sam
-REVIEW_VOTE_ADD:2 (Senior developer)
+LGTM:2 (Senior developer)
 </code></pre>
 
 <ul>
